kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshfarmjuba-service
spec:
  selector:
    app: freshfarmjuba
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
